...
                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="image_stone_normal" translatesAutoresizingMaskIntoConstraints="NO" id="lXu-L8-W8G">
                                        <rect key="frame" x="95" y="-11" width="224" height="455"/>
                                        <accessibility key="accessibilityConfiguration" identifier="brickImage"/>
                                    </imageView>
                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="12°" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="19N-Ov-JpP">
                                        <rect key="frame" x="16" y="452" width="124" height="126"/>
                                        <accessibility key="accessibilityConfiguration" identifier="temperature"/>
                                        <constraints>
                                            <constraint firstAttribute="height" constant="126" id="gaz-wa-s6o"/>
...
                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="sunny" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="mhg-XN-Jt4">
                                        <rect key="frame" x="16" y="545" width="89.5" height="58"/>
                                        <accessibility key="accessibilityConfiguration" identifier="typeOfWeather"/>
                                        <constraints>
                                            <constraint firstAttribute="height" constant="58" id="Wlx-bm-MT3"/>
...
                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Qff-AA-ndC">
                                                <rect key="frame" x="0.0" y="0.0" width="36" height="35.5"/>
                                                <accessibility key="accessibilityConfiguration" identifier="locationButton"/>
                                                <fontDescription key="fontDescription" name="SFProDisplay-Semibold" family="SF Pro Display" pointSize="18"/>
                                                <color key="tintColor" systemColor="systemCyanColor"/>
...
                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="center" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Krakow, Poland" textAlignment="center" lineBreakMode="tailTruncation" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="v4b-uR-EYT">
                                                <rect key="frame" x="44" y="0.0" width="104.5" height="35.5"/>
                                                <accessibility key="accessibilityConfiguration" identifier="LocationLabel"/>
                                                <fontDescription key="fontDescription" name="SFProDisplay-Light" family="SF Pro Display" pointSize="17"/>
                                                <nil key="textColor"/>
...
                                            <button opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="249" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="5ey-e2-jfU">
                                                <rect key="frame" x="156.5" y="0.0" width="35.5" height="35.5"/>
                                                <accessibility key="accessibilityConfiguration" identifier="SearchButton"/>
                                                <fontDescription key="fontDescription" name="SFProDisplay-Semibold" family="SF Pro Display" pointSize="18"/>
                                                <color key="tintColor" systemColor="systemCyanColor"/>
...
                                    <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="write the city here" textAlignment="natural" minimumFontSize="17" clearButtonMode="always" translatesAutoresizingMaskIntoConstraints="NO" id="81h-rS-Toj">
                                        <rect key="frame" x="24" y="367" width="367" height="36"/>
                                        <accessibility key="accessibilityConfiguration" identifier="SearchTextField"/>
                                        <constraints>
                                            <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="34" id="QaJ-Be-fCk"/>
...
